--- a/.github/workflows/check_enforcer.yml
+++ b/.github/workflows/check_enforcer.yml
@@ -20,10 +20,7 @@ jobs:
         run: |
             Set-PSDebug -Trace 1
             $first_commit = "${{ github.sha }}"
-            $github_repository = 'microsoft/promptflow'
-            $first_commit_hash = "$(git rev-parse $first_commit)"
-            $head_hash = "$(git rev-parse HEAD)"
-            
+            $github_repository = 'microsoft/promptflow'            
             
             function get_diffs() {
                 $snippet_debug = 1
@@ -71,7 +68,7 @@ jobs:
                     }
             
                     # Get pipeline status.
-                    $valid_status_array = $(gh api /repos/$github_repository/commits/$head_hash/check-runs) `
+                    $valid_status_array = $(gh api /repos/$github_repository/commits/$first_commit/check-runs) `
                     | ConvertFrom-Json `
                     | Select-Object -ExpandProperty check_runs `
                     | Where-Object {
