--- a/.github/workflows/samples_tutorials_e2e_development_chat_with_pdf.yml
+++ b/.github/workflows/samples_tutorials_e2e_development_chat_with_pdf.yml
@@ -9,7 +9,7 @@ on:
     - cron: "1 19 * * *" # Every day starting at 3:1 BJT
   pull_request:
     branches: [ main ]
-    paths: [ examples/connections/azure_openai.yml, examples/flows/chat/chat-with-pdf/**, .github/workflows/samples_tutorials_e2e_development_chat_with_pdf.yml, examples/requirements.txt ]
+    paths: [ examples/tutorials/e2e-development/**, examples/connections/azure_openai.yml, examples/flows/chat/chat-with-pdf/**, .github/workflows/samples_tutorials_e2e_development_chat_with_pdf.yml, examples/requirements.txt ]
   workflow_dispatch:
 
 env:
