--- a/.github/workflows/check_enforcer.yml
+++ b/.github/workflows/check_enforcer.yml
@@ -13,6 +13,10 @@ jobs:
       - uses: actions/checkout@v4
       - run: git fetch origin main
       - run: env | sort >> $GITHUB_OUTPUT
+      - name: Show GitHub context
+        env:
+            GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: echo "$GITHUB_CONTEXT"
       - name: Summarize check status
         id: summarize_check_status
         working-directory: ${{ github.workspace }}
