--- a/.github/workflows/tools_tests.yml
+++ b/.github/workflows/tools_tests.yml
@@ -22,14 +22,14 @@ jobs:
           ref: ${{ github.event.pull_request.head.sha || github.ref }}
       - name: Setup
         run: |
+          echo "DEPENDENCY_SOURCE_MODE ${{ env.DEPENDENCY_SOURCE_MODE }}"
           python -m pip install --upgrade pip
           pip install pytest pytest_mock
           pip install azure-identity azure-keyvault-secrets
           # "DEPENDENCY_SOURCE_MODE" is "main" or "package", means the dependency source of code
-          echo "$DEPENDENCY_SOURCE_MODE"
-          if [ "$DEPENDENCY_SOURCE_MODE" = "main" ]; then
+          if [ "${{ env.DEPENDENCY_SOURCE_MODE }}" = "main" ]; then
             python ./scripts/building/dev_setup.py --promptflow-extra-deps azure
-            pip install google-search-results==2.4.1
+            pip install google-search-results==2.4.1  
             pip install openai>=1.0.0
           else
             pip install -r ./src/promptflow-tools/requirements.txt
