--- a/.github/workflows/check_enforcer.yml
+++ b/.github/workflows/check_enforcer.yml
@@ -13,16 +13,11 @@ jobs:
       - uses: actions/checkout@v4
       - run: git fetch origin main
       - run: env | sort >> $GITHUB_OUTPUT
-      - name: Show GitHub context
-        env:
-            GITHUB_CONTEXT: ${{ toJson(github) }}
-        run: echo "$GITHUB_CONTEXT"
       - name: Summarize check status
         id: summarize_check_status
         working-directory: ${{ github.workspace }}
         shell: pwsh
         run: |
-            Set-PSDebug -Trace 1
             $first_commit = "${{ github.sha }}"
             $github_repository = 'microsoft/promptflow'
             $merge_commit = ""
@@ -123,9 +118,11 @@ jobs:
                     }
                     if ($failed_reason -ne "") {
                         Write-Host $failed_reason
-                        Write-Host "[DEBUG][pipelines_count]"
-                        $pipelines_count.GetEnumerator() | ForEach-Object {
-                            Write-Host "  $($_.Key): $($_.Value)"
+                        if ($snippet_debug -eq 1) {
+                            Write-Host "[DEBUG][pipelines_count]"
+                            $pipelines_count.GetEnumerator() | ForEach-Object {
+                                Write-Host "  $($_.Key): $($_.Value)"
+                            }
                         }
                         continue
                     }
@@ -154,6 +151,12 @@ jobs:
                                     $failed_reason = "Required pipelines are not finished."
                                 }
                             }
+                        }
+                    }
+                    if ($snippet_debug -eq 1) {
+                        Write-Host "[DEBUG][pipelines_count]"
+                        $pipelines_count.GetEnumerator() | ForEach-Object {
+                            Write-Host "  $($_.Key): $($_.Value)"
                         }
                     }
                     if ($failed_reason.Contains("not successful")) {
