--- a/src/promptflow/tests/test_configs/flows/web_classification_with_additional_include/flow.dag.yaml
+++ b/src/promptflow/tests/test_configs/flows/web_classification_with_additional_include/flow.dag.yaml
@@ -38,7 +38,7 @@ nodes:
     text: ${fetch_text_content_from_url.output}
   provider: AzureOpenAI
   connection: azure_open_ai_connection
-  api: completion
+  api: chat
   module: promptflow.tools.aoai
 
   use_variants: true
@@ -71,7 +71,7 @@ nodes:
     text_content: ${summarize_text_content.output}
   provider: AzureOpenAI
   connection: azure_open_ai_connection
-  api: completion
+  api: chat
   module: promptflow.tools.aoai
 - name: convert_to_dict
   type: python
@@ -106,7 +106,7 @@ node_variants:
             text: ${fetch_text_content_from_url.output}
           provider: AzureOpenAI
           connection: azure_open_ai_connection
-          api: completion
+          api: chat
           module: promptflow.tools.aoai
       variant_1:
         node:
@@ -130,7 +130,7 @@ node_variants:
             text: ${fetch_text_content_from_url.output}
           provider: AzureOpenAI
           connection: azure_open_ai_connection
-          api: completion
+          api: chat
           module: promptflow.tools.aoai
 additional_includes:
   - ../external_files/convert_to_dict.py
