--- a/src/promptflow/tests/test_configs/flows/web_classification_with_exception/flow.dag.yaml
+++ b/src/promptflow/tests/test_configs/flows/web_classification_with_exception/flow.dag.yaml
@@ -49,7 +49,7 @@ nodes:
     text_content: ${summarize_text_content.output}
   provider: AzureOpenAI
   connection: azure_open_ai_connection
-  api: completion
+  api: chat
   module: promptflow.tools.aoai
 - name: convert_to_dict
   type: python
@@ -84,7 +84,7 @@ node_variants:
             text: ${fetch_text_content_from_url.output}
           provider: AzureOpenAI
           connection: azure_open_ai_connection
-          api: completion
+          api: chat
           module: promptflow.tools.aoai
       variant_1:
         node:
@@ -108,5 +108,5 @@ node_variants:
             text: ${fetch_text_content_from_url.output}
           provider: AzureOpenAI
           connection: azure_open_ai_connection
-          api: completion
+          api: chat
           module: promptflow.tools.aoai
