--- a/.github/workflows/check_enforcer.yml
+++ b/.github/workflows/check_enforcer.yml
@@ -18,12 +18,13 @@ jobs:
         working-directory: ${{ github.workspace }}
         shell: pwsh
         run: |
+            SET-PSDEBUG -Trace 1
             $first_commit = "${{ github.sha }}"
             $github_repository = 'microsoft/promptflow'
             $merge_commit = ""
             
             function get_diffs() {
-                $snippet_debug = 1
+                $snippet_debug = 0
 
                 git log -1 | ForEach-Object {
                     if ($_.Contains("Merge")) {
@@ -32,13 +33,13 @@ jobs:
                 }
 
                 if ($snippet_debug -eq 1) {
-                    Write-Output "merge_commit $merge_commit" >> $env:GITHUB_OUTPUT
+                    Write-Output "merge_commit $merge_commit"
                 }
             
                 $need_to_check = New-Object System.Collections.Generic.HashSet[string]
                 git diff --name-only HEAD origin/main | ForEach-Object {
                     if ($snippet_debug -eq 1) {
-                        Write-Output "git diff --name-only HEAD main $_" >> $env:GITHUB_OUTPUT
+                        Write-Output "git diff --name-only HEAD main $_"
                     }
                     if ($_.Contains("src/promptflow")) {
                         $need_to_check.Add("sdk_cli")
@@ -85,7 +86,7 @@ jobs:
                     | Select-Object -ExpandProperty check_suites `
                     | ForEach-Object {
                         if ($snippet_debug -eq 1) {
-                            Write-Output "check-suites id $($_.id)" >> $env:GITHUB_OUTPUT
+                            Write-Output "check-suites id $($_.id)"
                         }
                         $suite_id = $_.id
                         $(gh api /repos/microsoft/promptflow/check-suites/$suite_id/check-runs) `
@@ -93,7 +94,7 @@ jobs:
                         | Select-Object -ExpandProperty check_runs `
                         | ForEach-Object {
                             if ($snippet_debug -eq 1) {
-                                Write-Output "check runs name $($_.name)" >> $env:GITHUB_OUTPUT
+                                Write-Output "check runs name $($_.name)"
                             }
                             foreach ($key in $pipelines.Keys) {
                                 $value = $pipelines[$key]
@@ -117,11 +118,11 @@ jobs:
                         }
                     }
                     if ($failed_reason -ne "") {
-                        Write-Output "$failed_reason" >> $env:GITHUB_OUTPUT
+                        Write-Output "$failed_reason"
                         if ($snippet_debug -eq 1) {
-                            Write-Output "pipelines_count" >> $env:GITHUB_OUTPUT
+                            Write-Output "pipelines_count"
                             $pipelines_count.GetEnumerator() | ForEach-Object {
-                                Write-Output "  $($_.Key): $($_.Value)" >> $env:GITHUB_OUTPUT
+                                Write-Output "  $($_.Key): $($_.Value)"
                             }
                         }
                         continue
@@ -154,19 +155,19 @@ jobs:
                         }
                     }
                     if ($snippet_debug -eq 1) {
-                        Write-Output "pipelines_count" >> $env:GITHUB_OUTPUT
+                        Write-Output "pipelines_count"
                         $pipelines_count.GetEnumerator() | ForEach-Object {
-                            Write-Output "  $($_.Key): $($_.Value)" >> $env:GITHUB_OUTPUT
+                            Write-Output "  $($_.Key): $($_.Value)"
                         }
                     }
                     if ($failed_reason.Contains("not successful")) {
-                        Write-Output "$failed_reason" >> $env:GITHUB_OUTPUT
+                        Write-Output "$failed_reason"
                         break
                     } elseif ($failed_reason.Contains("not successful")) {
-                        Write-Output "$failed_reason" >> $env:GITHUB_OUTPUT
+                        Write-Output "$failed_reason"
                         continue
                     } else {
-                        Write-Output "All required pipelines are successful." >> $env:GITHUB_OUTPUT
+                        Write-Output "All required pipelines are successful."
                         break
                     }
                 }
