--- a/src/promptflow/tests/test_configs/flows/tool_with_new_image_contract/flow.dag.yaml
+++ b/src/promptflow/tests/test_configs/flows/tool_with_new_image_contract/flow.dag.yaml
@@ -54,6 +54,10 @@ nodes:
     type: code
     path: passthrough.py
   inputs:
+    image:
+      type: image_file
+      image_file:
+        path: logo.jpg
     question: ${inputs.question}
     chat_history: ${inputs.chat_history}
 version: 2
