--- a/examples/flows/evaluation/eval-qna-non-rag/flow.dag.yaml
+++ b/examples/flows/evaluation/eval-qna-non-rag/flow.dag.yaml
@@ -55,14 +55,14 @@ nodes:
     temperature: 0
     top_p: 1
     stop: ""
-    max_tokens: 0
+    max_tokens: 1
     presence_penalty: 0
     frequency_penalty: 0
     logit_bias: ""
     question: ${inputs.question}
     answer: ${inputs.answer}
   provider: AzureOpenAI
-  connection: Default_AzureOpenAI
+  connection: open_ai_connection
   api: chat
   module: promptflow.tools.aoai
   activate:
@@ -93,7 +93,7 @@ nodes:
     temperature: 0
     top_p: 1
     stop: ""
-    max_tokens: 0
+    max_tokens: 1
     presence_penalty: 0
     frequency_penalty: 0
     logit_bias: ""
@@ -101,7 +101,7 @@ nodes:
     ground_truth: ${inputs.ground_truth}
     question: ${inputs.question}
   provider: AzureOpenAI
-  connection: Default_AzureOpenAI
+  connection: open_ai_connection
   api: chat
   module: promptflow.tools.aoai
   activate:
@@ -118,7 +118,7 @@ nodes:
     temperature: 0
     top_p: 1
     stop: ""
-    max_tokens: 0
+    max_tokens: 1
     presence_penalty: 0
     frequency_penalty: 0
     logit_bias: ""
@@ -126,7 +126,7 @@ nodes:
     context: ${inputs.context}
     question: ${inputs.question}
   provider: AzureOpenAI
-  connection: Default_AzureOpenAI
+  connection: open_ai_connection
   api: chat
   module: promptflow.tools.aoai
   activate:
@@ -143,14 +143,14 @@ nodes:
     temperature: 0
     top_p: 1
     stop: ""
-    max_tokens: 0
+    max_tokens: 1
     presence_penalty: 0
     frequency_penalty: 0
     logit_bias: ""
     answer: ${inputs.answer}
     question: ${inputs.question}
   provider: AzureOpenAI
-  connection: Default_AzureOpenAI
+  connection: open_ai_connection
   api: chat
   module: promptflow.tools.aoai
   activate:
@@ -179,14 +179,14 @@ nodes:
     temperature: 0
     top_p: 1
     stop: ""
-    max_tokens: 0
+    max_tokens: 1
     presence_penalty: 0
     frequency_penalty: 0
     logit_bias: ""
     answer: ${inputs.answer}
     context: ${inputs.context}
   provider: AzureOpenAI
-  connection: Default_AzureOpenAI
+  connection: open_ai_connection
   api: chat
   module: promptflow.tools.aoai
   activate:
@@ -217,7 +217,7 @@ nodes:
     type: package
     tool: promptflow.tools.embedding.embedding
   inputs:
-    connection: Default_AzureOpenAI
+    connection: open_ai_connection
     deployment_name: text-embedding-ada-002
     input: ${inputs.ground_truth}
   activate:
@@ -230,7 +230,7 @@ nodes:
     type: package
     tool: promptflow.tools.embedding.embedding
   inputs:
-    connection: Default_AzureOpenAI
+    connection: open_ai_connection
     deployment_name: text-embedding-ada-002
     input: ${inputs.answer}
   activate:
