--- a/examples/flows/evaluation/eval-qna-rag-metrics/flow.dag.yaml
+++ b/examples/flows/evaluation/eval-qna-rag-metrics/flow.dag.yaml
@@ -425,7 +425,7 @@ nodes:
     temperature: 0
     top_p: 1
     stop: ""
-    max_tokens: 0
+    max_tokens: 1000
     presence_penalty: 0
     frequency_penalty: 0
     logit_bias: ""
@@ -433,7 +433,7 @@ nodes:
     answer: ${inputs.answer}
     question: ${inputs.question}
   provider: AzureOpenAI
-  connection: Default_AzureOpenAI
+  connection: open_ai_connection
   api: chat
   module: promptflow.tools.aoai
   activate:
@@ -450,14 +450,14 @@ nodes:
     temperature: 0
     top_p: 1
     stop: ""
-    max_tokens: 0
+    max_tokens: 1000
     presence_penalty: 0
     frequency_penalty: 0
     logit_bias: ""
     FullBody: ${inputs.documents}
     question: ${inputs.question}
   provider: AzureOpenAI
-  connection: Default_AzureOpenAI
+  connection: open_ai_connection
   api: chat
   module: promptflow.tools.aoai
   activate:
@@ -474,7 +474,7 @@ nodes:
     temperature: 0
     top_p: 1
     stop: ""
-    max_tokens: 0
+    max_tokens: 1000
     presence_penalty: 0
     frequency_penalty: 0
     logit_bias: ""
@@ -482,7 +482,7 @@ nodes:
     answer: ${inputs.answer}
     question: ${inputs.question}
   provider: AzureOpenAI
-  connection: Default_AzureOpenAI
+  connection: open_ai_connection
   api: chat
   module: promptflow.tools.aoai
   activate:
