fix README.md in rai qna eval flows
* fix sample code in README.md in both RAI Q&A eval flows
* update data.jsonl in RAI Q&A non-RAG eval flow
* update default input in RAI Q&A non-rag eval flow
* fix bugs in f1_score and concat_scores.py in RAI Q&A non-RAG eval flow

--- a/examples/flows/evaluation/eval-qna-non-rag/flow.dag.yaml
+++ b/examples/flows/evaluation/eval-qna-non-rag/flow.dag.yaml
@@ -3,7 +3,7 @@ name: QnA Evaluation
 inputs:
   question:
     type: string
-    default: Which camping table holds the most weight?
+    default: Which tent is the most waterproof?
     is_chat_input: false
   answer:
     type: string
